syntax = "proto3";

package history;


message History {
    // two sided
    bytes edges = 1;
    bytes entities = 2;
    bytes sideConditions = 3;
    bytes field = 4;
    int32 length = 5;
}